<resources>
    <string name="app_name">Firebase App</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="firebase_application">Firebase Application</string>
    <string name="enter_e_mail_address">Enter E-Mail Address</string>
    <string name="enter_password">Enter Password</string>
    <string name="create_account">Create Account</string>
    <string name="login">Login</string>
    <string name="push">Push</string>
    <string name="query_1">Query 1</string>
    <string name="query_2">Query 2</string>
    <string name="logout">Logout</string>
    <string name="student_id">Student ID</string>
</resources>
